syntax = "proto3";

package ln.dev.protos;
import "coordinate.proto";

option java_multiple_files = true;
option java_package = "ln.dev.protos.event";
option java_outer_classname = "EventProto";

enum EventType {
  ENTERTAINMENT = 0;
  HEALTH = 1;
  EDUCATION = 2;
  FOOD = 3;
  POLITIC = 4;
  UNFORTUNATE = 5;
  BUSINESS = 6;
  FESTIVAL = 7;
}

enum TimestampFilterOperator {
  BEFORE = 0;
  AFTER = 1;
}

message Event {
  string name = 1;
  EventType type = 2;
  string description = 3;
  string timestamp = 4;
  Coordinate location = 5;
}


message EventStreamFilters {
  repeated EventType type = 1;
  string name = 2;
  string timestamp = 3;
  TimestampFilterOperator timestampFilterOperator = 4;
  Coordinate location = 5;
  double locationRadius = 6;
}